--- a/Basic QA system-Derek combination new whole thing.ipynb
+++ b/Basic QA system-Derek combination new whole thing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -37,13 +37,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70159\n"
+      "8463\n"
      ]
     }
    ],
    "source": [
     "length=0\n",
-    "for ele in train:\n",
+    "for ele in dev:\n",
     "    length += len(ele)\n",
     "print length"
    ]
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +400,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def check_location(partBDevAnswers, dev, devSents, question_type):\n",
+    "    location_questions = {}\n",
+    "    for (docid, queryid, sentsid, answer_entities) in partBDevAnswers:\n",
+    "        right_answer = dev[docid][queryid]['answer']\n",
+    "        for (entities,type_of_entities) in answer_entities:\n",
+    "            if entities == right_answer and type_of_entities==question_type:\n",
+    "                #print entities\n",
+    "                question = word_tokenizer.tokenize(dev[docid][queryid]['question'])\n",
+    "                #for word in question:\n",
+    "                    #location_questions[word] =location_questions.get(word,0)+1\n",
+    "\n",
+    "                location_questions[' '.join(question[:2])] =location_questions.get(' '.join(question[:2]),0)+1\n",
+    "    sorted_dict = sort_orderedDict(location_questions)\n",
+    "    final_list = []\n",
+    "    for (phrase,count) in sorted_dict.items():\n",
+    "        #by checking dev sets. for train set could be different range\n",
+    "        if count>=3:\n",
+    "            final_list.append(phrase)\n",
+    "    return final_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "location_questions = check_location(partBDevAnswers, dev, devSents,'PERSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'Who was', u'Who is', u'Which contestant', u'What was', u'Who wrote', u'What is', u'Who did', u'Who played', u'Who said', u'Who came', u'Who won', u'Who has', u'Who discovered', u'Who led']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (location_questions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -408,34 +467,80 @@
     {
      "data": {
       "text/plain": [
-       "(0,\n",
-       " 0,\n",
-       " 1,\n",
-       " [(u'Night-vision devices using active near-infrared illumination allow', 'O'),\n",
-       "  (u'people', 'POSTNUM'),\n",
-       "  (u'or', 'STOPWORD'),\n",
-       "  (u'animals', u'O'),\n",
-       "  (u'to be', 'STOPWORD'),\n",
-       "  (u'observed without', u'O'),\n",
-       "  (u'the', 'STOPWORD'),\n",
-       "  (u'observer', u'O'),\n",
-       "  (u'being', 'STOPWORD'),\n",
-       "  (u'detected', u'O'),\n",
-       "  (u'.', 'PUNC')])"
+       "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "partBDevAnswers[0]"
+    "'Infrared thermal-imaging cameras' == 'Infrared thermal-imaging cameras'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 3, 3, [(u'Infrared thermal-imaging cameras', 'O'), (u'are', 'STOPWORD'), (u'used', u'O'), (u'to', 'STOPWORD'), (u'detect heat loss', u'O'), (u'in', 'STOPWORD'), (u'insulated systems', u'O'), (u',', 'PUNC'), (u'to', 'STOPWORD'), (u'observe changing blood flow', u'O'), (u'in the', 'STOPWORD'), (u'skin', u'O'), (u',', 'PUNC'), (u'and to', 'STOPWORD'), (u'detect overheating', u'O'), (u'of', 'STOPWORD'), (u'electrical apparatus', u'O'), (u'.', 'PUNC')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print partBDevAnswers[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'answer': u'Infrared thermal-imaging cameras', u'question': u'What devices are used to observe insulated system heat loss?', u'answer_sentence': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dev[0]这个是doc id,第二个是query id\n",
+    "print dev[0][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Infrared thermal-imaging cameras are used to detect heat loss in insulated systems, to observe changing blood flow in the skin, and to detect overheating of electrical apparatus.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#这里第二个是sentence id\n",
+    "print devSents[0][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -477,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -503,20 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2409\n",
-      "6054\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(nerDevCorrect, nerDevWrong) = evaluateNERonDev()\n",
     "print len(nerDevCorrect)\n",
@@ -532,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -728,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -747,7 +843,7 @@
     "    return float(temp)/float(len(same_words))\n",
     "\n",
     "def sort_orderedDict(orderdict):\n",
-    "    return OrderedDict(sorted(orderdict.items(), key = lambda x:x[1], reverse = False))\n",
+    "    return OrderedDict(sorted(orderdict.items(), key = lambda x:x[1], reverse = True))\n",
     "        \n",
     "\n",
     "def third_filter(question,second_filter,anwser_entities):\n",
@@ -1153,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
