--- a/derek -try final workflow.ipynb
+++ b/derek -try final workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +184,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -705,6 +705,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'candidates': [(u'Infrared', 'O'),\n",
+       "  (u'is', 'STOPWORD'),\n",
+       "  (u'used', u'O'),\n",
+       "  (u'in', 'STOPWORD'),\n",
+       "  (u'night vision equipment', u'O'),\n",
+       "  (u'when there is', 'STOPWORD'),\n",
+       "  (u'insufficient visible light', u'O'),\n",
+       "  (u'to', 'STOPWORD'),\n",
+       "  (u'see', u'O'),\n",
+       "  (u'.', 'PUNC')],\n",
+       " 'question_index': 0,\n",
+       " 'sentence_index': 71,\n",
+       " 'set_index': 0}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DATA['dev'][\"b_output_answer_set\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {
     "collapsed": true
@@ -925,6 +959,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "def sort_orderedDict(orderdict):\n",
+    "    return OrderedDict(sorted(orderdict.items(), key = lambda x:x[1], reverse = True))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def check_type_word(partBDevAnswers, dev, devSents, question_type):\n",
+    "    location_questions = {}\n",
+    "    #for (docid, queryid, sentsid, answer_entities) in partBDevAnswers:\n",
+    "    for ele in partBDevAnswers:\n",
+    "        right_answer = dev[ele['set_index']][ele['question_index']]['answer']\n",
+    "        for (entities,type_of_entities) in ele['candidates']:\n",
+    "            if entities == right_answer and type_of_entities==question_type:\n",
+    "                #print entities\n",
+    "                question = word_tokenizer.tokenize(dev[ele['set_index']][ele['question_index']]['question'])\n",
+    "                #for word in question:\n",
+    "                    #location_questions[word] =location_questions.get(word,0)+1\n",
+    "\n",
+    "                location_questions[' '.join(question[:2])] =location_questions.get(' '.join(question[:2]),0)+1\n",
+    "    sorted_dict = sort_orderedDict(location_questions)\n",
+    "    final_list = []\n",
+    "    for (phrase,count) in sorted_dict.items():\n",
+    "        #by checking dev sets. for train set could be different range\n",
+    "        if count>=4:\n",
+    "            final_list.append(phrase)\n",
+    "    return final_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "person_word_list = check_type_word(DATA['dev'][\"b_output_answer_set\"], dev, devSents,'PERSON')\n",
+    "location_word_list = check_type_word(DATA['dev'][\"b_output_answer_set\"], dev, devSents,'LOCATION')\n",
+    "number_word_list = check_type_word(DATA['dev'][\"b_output_answer_set\"], dev, devSents,'NUMBER')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'Who was', u'Who is', u'Which contestant', u'What was', u'Who wrote', u'What is', u'Who said', u'Who did', u'Who has', u'Who played']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print person_word_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "location = ['where','what place',u'Where is', u'What country',u'Along with', u'Where are',u'On what', u'What city', u'In the', u'Where did','Where']\n",
+    "number = [u'How many',u'How much','When','what year',u'When did', u'What year', u'When was',u'How long',u'When were', 'when']\n",
+    "person = [u'Who was', u'Who is', u'Which contestant',u'Who wrote', u'Who said', u'Who did', u'Who has', u'Who played','Who','whom','who',]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def getQuestionType(question):\n",
+    "    \n",
+    "    for ele in person:\n",
+    "        if ele in question:\n",
+    "            return 'PERSON'\n",
+    "    for ele in  location:                       \n",
+    "        if ele in question:\n",
+    "            return 'LOCATION'\n",
+    "    for ele in  number:  \n",
+    "        if ele in question:\n",
+    "            return 'NUMBER'\n",
+    "    return 'O'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {
     "collapsed": true
@@ -958,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -999,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -1046,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -1093,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -1127,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -1151,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -1239,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -1263,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -1274,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -1354,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -1372,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -1409,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -1434,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -1459,11 +1604,11 @@
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  35\n",
-      "Rank Wrong:  369\n",
+      "Rank Correct:  32\n",
+      "Rank Wrong:  372\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0866336633663\n",
-      "Rank Correct Average of Previous %:  0.522388059701\n",
+      "Rank Overall Average %:  0.0792079207921\n",
+      "Rank Correct Average of Previous %:  0.477611940299\n",
       "\n"
      ]
     }
@@ -1474,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -1495,15 +1640,15 @@
       "        'predicted_answer': u'eight minutes',\n",
       "        'question_index': 0,\n",
       "        'ranked_answers': [   [   (u'eight minutes', 'NUMBER'),\n",
-      "                                  0.2857142857142857]],\n",
+      "                                  0.38095238095238093]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  10166\n",
-      "Rank Wrong:  59993\n",
+      "Rank Correct:  10378\n",
+      "Rank Wrong:  59781\n",
       "Rank Total:  70159\n",
-      "Rank Overall Average %:  0.144899442694\n",
-      "Rank Correct Average of Previous %:  0.506602880351\n",
+      "Rank Overall Average %:  0.14792115053\n",
+      "Rank Correct Average of Previous %:  0.517167488912\n",
       "\n"
      ]
     }
@@ -1514,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -1545,11 +1690,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1159\n",
-      "Rank Wrong:  7304\n",
+      "Rank Correct:  1169\n",
+      "Rank Wrong:  7294\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.136949072433\n",
-      "Rank Correct Average of Previous %:  0.479917184265\n",
+      "Rank Overall Average %:  0.138130686518\n",
+      "Rank Correct Average of Previous %:  0.484057971014\n",
       "\n"
      ]
     }
