--- a/Basic QA system - Evaluation of each type- Refining Other Tag using POS.ipynb
+++ b/Basic QA system - Evaluation of each type- Refining Other Tag using POS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -179,22 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "grammar = \"\"\" ANS: {<NNP>*}\n",
-    "                   {<JJ>?<NN>*}\n",
-    "                   {<NN><NNS>}\n",
-    "\"\"\"\n",
-    "chink = \"}<,|EX|WP|WRB|VBZ|WDT|RBS|VDB|.|:>+{\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "grammar = \"\"\" ANS: {<JJ>?<N.*>*}\n",
     "                   {<DT>?<N.*>*}\n",
     "                   }<UH|POS|VB|VBG|RP|DT|MD|PRP$|TO|RB|JJS|PDT|IN|PRP|VBP|VBN|RBS|WRB|WP|EX|VBZ|WDT|VBD>{\n",
@@ -214,7 +204,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('it', 'PRP')]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.pos_tag(['it'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -256,9 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -279,7 +291,8 @@
     "                tag = 'PUNC'\n",
     "            elif word in postUnits:\n",
     "                tag = 'POSTNUM'\n",
-    "\n",
+    "            elif isCapitalised(word):\n",
+    "                tag = \"OTHERCAP\"\n",
     "        newWordTags.append((word, tag))\n",
     "    \n",
     "    newWordTags = combineTags (newWordTags)\n",
@@ -309,7 +322,7 @@
     "    newNewTags = []\n",
     "    prevWord = newTags[0][0]\n",
     "    prevTag = newTags[0][1]\n",
-    "    if (prevTag == \"OTHERCAP\"):\n",
+    "    if (prevTag == \"OTHERCAP\" and newTags[1][1] != \"OTHERCAP\"):\n",
     "        prevTag = \"O\"\n",
     "        \n",
     "    for (word, tag) in newTags[1:]:\n",
@@ -363,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -395,7 +408,7 @@
        "[u'long playing', u'12\", 10\", 7\"', u'rpm']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -480,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -488,10 +501,10 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 6), (6, 7), (7, 9), (9, 10), (10, 11)]"
+       "[(0, 1), (1, 3), (3, 4), (4, 6), (6, 7)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -543,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -552,9 +565,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(u'The groove usually starts near', 'O'), (u'the', 'STOPWORD'), (u'periphery', u'O'), (u'and', 'STOPWORD'), (u'ends near', u'O'), (u'the', 'STOPWORD'), (u'center', u'O'), (u'of the', 'STOPWORD'), (u'disc', u'O'), (u'.', 'PUNC')]\n",
+      "[(u'The', 'O'), (u'groove', 'O'), (u'usually', 'O'), (u'starts', 'O'), (u'near', 'O'), (u'the', 'O'), (u'periphery', 'O'), (u'and', 'O'), (u'ends', 'O'), (u'near', 'O'), (u'the', 'O'), (u'center', 'O'), (u'of', 'O'), (u'the', 'O'), (u'disc', 'O'), (u'.', 'PUNC')]\n",
       "\n",
-      "[0, 1]\n"
+      "[3, 4, 5]\n"
      ]
     }
    ],
@@ -575,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -615,25 +628,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-257-2d068b9f8e58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mcorrect_taggings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mincorrect_taggings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevil_ones\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_NER_tag_analysis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-256-744a03afc19a>\u001b[0m in \u001b[0;36mget_NER_tag_analysis\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m                 \u001b[0mcandidate_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_taggings_in_range\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mans_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans_end\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcandidates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcandidate_ids\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                     \u001b[0mpossible_correct_candidate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcandidates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcandidate_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-16-e9999d5b4b59>\u001b[0m in \u001b[0;36mget_taggings_in_range\u001b[0;34m((ans_start, ans_end), candidates)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_taggings_in_range\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mans_start\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mans_end\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcandidates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mcandidate_ranges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvert_candidates_to_range\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcandidates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mcurrent_considered_candidate_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-14-411d5bee0bc7>\u001b[0m in \u001b[0;36mconvert_candidates_to_range\u001b[0;34m(candidates)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcandidates\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mtokenisedWords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mnextIndex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenisedWords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mcandidatesIndexRange\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnextIndex\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/alex/anaconda2/lib/python2.7/site-packages/nltk/tokenize/__init__.pyc\u001b[0m in \u001b[0;36mword_tokenize\u001b[0;34m(text, language)\u001b[0m\n\u001b[1;32m    108\u001b[0m     \"\"\"\n\u001b[1;32m    109\u001b[0m     return [token for sent in sent_tokenize(text, language)\n\u001b[0;32m--> 110\u001b[0;31m             for token in _treebank_word_tokenize(sent)]\n\u001b[0m\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/alex/anaconda2/lib/python2.7/site-packages/nltk/tokenize/treebank.pyc\u001b[0m in \u001b[0;36mtokenize\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mregexp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubstitution\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPUNCTUATION\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m             \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregexp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubstitution\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mregexp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubstitution\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPARENS_BRACKETS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n",
+      "Warning: parsing empty text\n"
      ]
     }
    ],
@@ -643,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -652,7 +701,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22\n"
+      "1051\n"
      ]
     }
    ],
@@ -662,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -671,8 +720,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "965\n",
-      "776\n"
+      "33534\n",
+      "35574\n"
      ]
     }
    ],
@@ -683,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -698,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -706,10 +755,14 @@
     {
      "data": {
       "text/plain": [
-       "Counter({u'LOCATION': 86, 'NUMBER': 329, 'O': 409, u'PERSON': 141})"
+       "Counter({u'LOCATION': 3503,\n",
+       "         'NUMBER': 9459,\n",
+       "         'O': 9554,\n",
+       "         'OTHERCAP': 6460,\n",
+       "         u'PERSON': 4558})"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -741,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -749,19 +802,19 @@
     {
      "data": {
       "text/plain": [
-       "[(('O', 'O', 'O'), 128),\n",
-       " (('O', 'O'), 110),\n",
-       " (('O',), 75),\n",
-       " (('O', 'O', 'O', 'O'), 61),\n",
-       " (('NUMBER',), 42),\n",
-       " (('O', 'O', 'O', 'O', 'O'), 38),\n",
-       " (('NUMBER', 'O', 'NUMBER'), 37),\n",
-       " (('NUMBER', 'O'), 29),\n",
-       " (('O', 'O', 'O', 'O', 'O', 'O'), 25),\n",
-       " (('O', 'NUMBER'), 24)]"
+       "[(('O',), 2875),\n",
+       " (('O', 'O'), 2805),\n",
+       " (('O', 'O', 'O'), 2406),\n",
+       " (('NUMBER',), 1298),\n",
+       " (('O', 'O', 'O', 'O'), 1223),\n",
+       " (('OTHERCAP', 'O', 'OTHERCAP'), 1090),\n",
+       " (('OTHERCAP', 'O'), 1074),\n",
+       " (('O', 'OTHERCAP'), 939),\n",
+       " (('O', 'O', 'O', 'O', 'O'), 770),\n",
+       " (('OTHERCAP',), 768)]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -780,16 +833,16 @@
     {
      "data": {
       "text/plain": [
-       "([(u'head', 'O'), (u'of', 'O'), (u'state', 'O')], u'head of state', 6, 69)"
+       "([(u'mirror-like finish', 'O')], u'mirror-like', 0, 285)"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wrongList[('O', 'O', 'O')][101]"
+    "wrongList[('O',)][2]"
    ]
   },
   {
@@ -930,11 +983,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: parsing empty text\n"
+     ]
+    }
+   ],
    "source": [
     "def evaluateNERonDev():\n",
     "    correct = []\n",
@@ -965,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -974,7 +1035,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.506203473945\n"
+      "0.524045846626\n"
      ]
     }
    ],
@@ -1008,10 +1069,9 @@
     "# POS tag on others\n",
     "# 900 tags.\n",
     "\n",
+    "# 0.524045846626 -> Chunking with capital tag\n",
     "\n",
-    "\n",
-    "\n",
-    "# POS tag on others!\n"
+    "# adding stopwords tag reduces to 0.517074323526 UNDO\n"
    ]
   },
   {
