--- a/Basic QA system - NER Error Analysis.ipynb
+++ b/Basic QA system - NER Error Analysis.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -418,51 +418,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing retrieval:  rapid\n",
+      "\n",
+      "Part A Output: \n",
+      "[{   'question_index': 0, 'sentence_index': 149, 'set_index': 0}]\n",
+      "\n",
+      "Retrieval Correct:  156\n",
+      "Retrieval Wrong:  248\n",
+      "Retrieval Total:  404\n",
+      "Retrieval Overall Average %:  0.386138613861\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "process_retrieval(\"rapid\", DATA, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing retrieval:  train\n",
+      "\n",
+      "Part A Output: \n",
+      "[{   'question_index': 0, 'sentence_index': 149, 'set_index': 0}]\n",
+      "\n",
+      "Retrieval Correct:  43679\n",
+      "Retrieval Wrong:  26480\n",
+      "Retrieval Total:  70159\n",
+      "Retrieval Overall Average %:  0.622571587394\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "process_retrieval(\"train\", DATA, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing retrieval:  dev\n",
+      "\n",
+      "Part A Output: \n",
+      "[{   'question_index': 0, 'sentence_index': 71, 'set_index': 0}]\n",
+      "\n",
+      "Retrieval Correct:  5060\n",
+      "Retrieval Wrong:  3403\n",
+      "Retrieval Total:  8463\n",
+      "Retrieval Overall Average %:  0.597896726929\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "process_retrieval(\"dev\", DATA, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing retrieval:  test\n",
+      "\n",
+      "Part A Output: \n",
+      "[{   'question_index': 0, 'sentence_index': 283, 'set_index': 0}]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "process_retrieval(\"test\", DATA, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -504,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -581,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -640,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -676,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -691,6 +755,296 @@
     "    pp.pprint(data[name][\"b_output_answer_set\"][:rapid_size])\n",
     "    print    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eval setup stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "def getAnswerDict(qss):\n",
+    "    sentDicts = defaultdict(list)\n",
+    "    for docID in range(0, len(qss)):\n",
+    "        qs = qss[docID]\n",
+    "        for q in qs:\n",
+    "            answer = q[\"answer\"]\n",
+    "            answerSent = (docID, q[\"answer_sentence\"])\n",
+    "            sentDicts[answerSent].append(answer)\n",
+    "    return sentDicts\n",
+    "trainSentDicts = getAnswerDict(train)\n",
+    "devSentDicts = getAnswerDict(dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(24, 28)]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#This function returns a list of the indexes of words that are an answer to a question in the train set\n",
+    "def getAnswerPos(docID, sentID, sents, answerDict):\n",
+    "    sententence = sents[docID][sentID]\n",
+    "    listAnswers = answerDict[(docID, sentID)]\n",
+    "    tokenisedSent =  nltk.word_tokenize(sententence)\n",
+    "    answerPosList = []\n",
+    "    for ans in listAnswers:\n",
+    "        tokenisedAns = nltk.word_tokenize(ans)\n",
+    "        # Inefficient\n",
+    "        \n",
+    "        for i in range (0, len(tokenisedSent) - len(tokenisedAns)):\n",
+    "            answerFragment = tokenisedSent[i:i+len(tokenisedAns)]\n",
+    "            if (answerFragment == tokenisedAns):\n",
+    "                answerPosList.append((i,i+len(tokenisedAns)))\n",
+    "\n",
+    "                break\n",
+    "    return answerPosList\n",
+    "\n",
+    "getAnswerPos(0,0,trainSents, trainSentDicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[30, 31], [5, 6], [8]]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getAnswerPos(0,9,trainSents, trainSentDicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "partBoutput = generate_part_b_output(\"train\", DATA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'candidates': [(u'They', 'O'),\n",
+       "  (u'had a', 'STOPWORD'),\n",
+       "  (u'playing time', u'O'),\n",
+       "  (u'of', 'STOPWORD'),\n",
+       "  (u'eight minutes', 'NUMBER'),\n",
+       "  (u'.', 'PUNC')],\n",
+       " 'question_index': 0,\n",
+       " 'sentence_index': 149,\n",
+       " 'set_index': 0}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "partBoutput[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'answer': u'long playing', u'question': u'What does LP stand for when it comes to time capacity?', u'answer_sentence': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print train[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "def convertCandidatesToRange(candidates):\n",
+    "    candidatesIndexRange = []\n",
+    "    index = 0\n",
+    "    for (words, tag) in candidates:\n",
+    "        tokenisedWords = nltk.word_tokenize(words)\n",
+    "        nextIndex = index + len(tokenisedWords)\n",
+    "        candidatesIndexRange.append((index,nextIndex ))\n",
+    "        index = nextIndex\n",
+    "    return candidatesIndexRange\n",
+    "\n",
+    "def nerAdvancedEvaluation(partBoutput,train,trainSents,trainSentDicts):\n",
+    "    correctAnswers = []\n",
+    "    incorrectAnswers = []\n",
+    "    for partBOut in partBoutput[7:8]:\n",
+    "        candidates = partBOut[\"candidates\"]\n",
+    "        set_index = partBOut['set_index']\n",
+    "        sentence_index = partBOut['sentence_index']\n",
+    "        question_index = partBOut['question_index']\n",
+    "        answer_positions = getAnswerPos(set_index,sentence_index,trainSents, trainSentDicts)\n",
+    "        question= train[set_index][question_index][\"question\"]\n",
+    "        correct_answer = train[set_index][question_index][\"answer\"]\n",
+    "\n",
+    "        if train[set_index][question_index][\"answer_sentence\"] != sentence_index:\n",
+    "            continue\n",
+    "\n",
+    "\n",
+    "        candidatesIndexRange = convertCandidatesToRange(candidates)\n",
+    "        print answer_positions\n",
+    "        print candidatesIndexRange\n",
+    "        print\n",
+    "\n",
+    "        for (ans_start, ans_end) in answer_positions:\n",
+    "            incorrectCandidates = []\n",
+    "            candidate_ID = -1\n",
+    "            for (cand_start, cand_end) in candidatesIndexRange:\n",
+    "                candidate_ID += 1\n",
+    "                if cand_start == ans_start and cand_end ==ans_end : #If the candidate is the answer\n",
+    "                    correctAnswers.append([candidates[candidate_ID]])\n",
+    "                    break\n",
+    "                if cand_start >= ans_start and cand_end >= ans_end :\n",
+    "                    incorrectAnswers.append([candidates[candidate_ID], correct_answer])\n",
+    "                    break\n",
+    "                if cand_start >= ans_start:\n",
+    "                    if (cand_end <= ans_end):\n",
+    "                        incorrectCandidates.append(candidates[candidate_ID])\n",
+    "                    else :\n",
+    "                        incorrectAnswers.append((incorrectCandidates, correct_answer))\n",
+    "                        break\n",
+    "        \n",
+    "    return (correctAnswers,incorrectAnswers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(25, 31), (47, 48)]\n",
+      "[(0, 1), (1, 2), (2, 3), (3, 5), (5, 6), (6, 7), (7, 9), (9, 11), (11, 12), (12, 13), (13, 14), (14, 16), (16, 19), (19, 20), (20, 22), (22, 24), (24, 25), (25, 28), (28, 29), (29, 30), (30, 31), (31, 32), (32, 33), (33, 34), (34, 35), (35, 37), (37, 38), (38, 39), (39, 40), (40, 41), (41, 44), (44, 46), (46, 47), (47, 48), (48, 49)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(correctAnswers,incorrectAnswers) = nerAdvancedEvaluation(partBoutput,train,trainSents,trainSentDicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u's', 'STOPWORD'), u'disc jockeys (DJ)s']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print incorrectAnswers[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
