Changed stanford parser so it tags all in one go

--- a/Basic QA system - Final Workflow.ipynb
+++ b/Basic QA system - Final Workflow.ipynb
@@ -136,6 +136,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Change [sentence] to [[sentence]] s.t. sentences are split by document ID, same as trainSet \n",
+    "def change_output_form (dataset, pos_sents):\n",
+    "    stanford_pos = []\n",
+    "    starting_index = 0\n",
+    "    for sents in dataset:\n",
+    "        sents_length = len(sents)\n",
+    "        ending_index = starting_index + sents_length\n",
+    "        tagged_sents = pos_sents[starting_index: ending_index]\n",
+    "        starting_index += sents_length\n",
+    "        stanford_pos.append(tagged_sents)\n",
+    "    return stanford_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false
@@ -169,16 +190,30 @@
     "    \n",
     "    else :\n",
     "        #Need to create taggings!\n",
-    "        taggedSentsList = []\n",
+    "        all_sents_tokenised = []\n",
     "        for sents in theSents:\n",
-    "            tokenisedSents = [word_tokenize(sent) for sent in sents]\n",
-    "            classifiedSents = sTagger.tag_sents(tokenisedSents)\n",
-    "            taggedSentsList.append(classifiedSents)\n",
+    "            for sent in sents:\n",
+    "                tokenised_sent = nltk.word_tokenize(sent)\n",
+    "                all_sents_tokenised.append(tokenised_sent)\n",
+    "        \n",
+    "        classifiedSents = sTagger.tag_sents(all_sents_tokenised)  \n",
+    "        \n",
+    "        taggedSentsList = change_output_form(classifiedSents)  \n",
+    "        \n",
     "        #And save them\n",
     "        with open(theFilePath, \"wb\") as fp: \n",
     "            pickle.dump(taggedSentsList, fp)\n",
     "        return taggedSentsList"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1853,21 +1888,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
